force-app/main/default/objects/ApprovalProcessStepInstance__c/ApprovalProcessStepInstance__c.object-meta.xml
<CustomObject>
    <label>AP_ApprovalProcessStepInstance</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ApprovalProcessStepInstance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP_ApprovalProcessStepInstances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>