force-app/main/default/objects/ApprovalProcessStepInstance__c/fields/Approval_Process_Step_Definition__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Step_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Process Step Definition</label>
    <referenceTo>ApprovalProcessStepDefinition__c</referenceTo>
    <relationshipName>ApprovalProcessStepInstances</relationshipName>
    <type>Lookup</type>
</CustomField>