force-app/main/default/objects/ApprovalProcessStepInstance__c/fields/Parent_Approval_Process_Instance__c.field-meta.xml
<CustomField>
    <fullName>Parent_Approval_Process_Instance__c</fullName>
    <label>Parent Approval Process Instance</label>
    <referenceTo>AP_ApprovalProcessInstance__c</referenceTo>
    <relationshipLabel>ApprovalProcessStepInstances</relationshipLabel>
    <relationshipName>ApprovalProcessStepInstances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>